Change noma_multiselect widget to fixed width; fixes layout issues

--- a/src/Noma/NomaBundle/Resources/public/css/noma.css
+++ b/src/Noma/NomaBundle/Resources/public/css/noma.css
@@ -28,3 +28,7 @@ td {
 select.nodeprop {
     width: 300px;
 }
+
+div.noma_multiselect {
+    width: 550px;
+}
